2012-01-26  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13583]
	* sysdeps/x86_64/multiarch/init-arch.h: Define bit_OSXSAVE.
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features): If
	bit_AVX is set also check OSXAVE/XCR0 and reset bit_AVX if necessary.

2012-01-25  Joseph Myers  <joseph@codesourcery.com>

	* elf/tst-unique3.cc (gets): Remove declaration.
	* elf/tst-unique3lib.cc (gets): Likewise.
	* elf/tst-unique3lib2.cc (gets): Likewise.
	* elf/tst-unique4.cc (gets): Likewise.

2012-01-24  Ulrich Drepper  <drepper@gmail.com>

	* include/stdio.h: Add C++ protection.  Add gets declarations and
	definitions.
	* debug/tst-chk1.c: Don't declare gets here.
	* stdio-common/tst-gets.c: Likewise.

2012-01-24  Joseph Myers  <joseph@codesourcery.com>

	* posix/glob: Remove directory.

2012-01-24  Joseph Myers  <joseph@codesourcery.com>

	* wcsmbs/Makefile (tst-c16c32-1-ENV): Define.

2012-01-22  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/mach/hurd/socket.c (__socket): Return EAFNOSUPPORT instead
	of the non-standard EPFNOSUPPORT.

2011-12-26  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/mmap.c (__mmap): When MAPADDR is nonzero, try
	__vm_allocate and __vm_map with ANYWHERE set to 0 first, and try with
	ANYWHERE set to 1 only on KERN_NO_SPACE error.

2012-01-21  Ulrich Drepper  <drepper@gmail.com>

	* wcsmbs/uchar.h: Test __STDC_VERSION__.

2012-01-20  Ulrich Drepper  <drepper@gmail.com>

	* nscd/aicache.c (addhstaiX): Do not cache negative results of
	transient errors.
	* nscd/grpcache.c (cache_addgr): Likewise.
	* nscd/hstcache.c (cache_addhst): Likewise.
	* nscd/initgrcache.c (addinitgroupsX): Likewise.
	* nscd/pwdcache.c (cache_addpw): Likewise.
	* nscd/servicescache.c (cache_addserv): Likewise.

2012-01-16  Ulrich Drepper  <drepper@gmail.com>

	* malloc/malloc.c: Various cleanups.
	* malloc/hooks.c: Likewise.

	* stdlib/Makefile (tests): Add bug-fmtmsg1.
	* stdlib/bug-fmtmsg1.c: New file.
